AUX_SOURCE_DIRECTORY(. CS_SRCS1)
AUX_SOURCE_DIRECTORY(../protocol PROTO_SRCS1)

SET(MUDUO_INCLUDE_PATH /home/build/debug-install/include)
SET(CS_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/CS/include)

INCLUDE_DIRECTORIES(${MUDUO_INCLUDE_PATH})
INCLUDE_DIRECTORIES(/home/muduo-0.9.7/)
INCLUDE_DIRECTORIES(${CS_INCLUDE_PATH})
INCLUDE_DIRECTORIES(/usr/include/libxml2/)
INCLUDE_DIRECTORIES(/usr/local/include/libxml2/)
INCLUDE_DIRECTORIES(/home/common/include)

LINK_DIRECTORIES(/home/build/debug-install/lib)
LINK_DIRECTORIES(/home/common/lib)

ADD_EXECUTABLE(CS ${CS_SRCS1} ${PROTO_SRCS1})
TARGET_LINK_LIBRARIES(CS common xml2 muduo_net_cpp11 muduo_base_cpp11 pthread rt dl protobuf z)

#ADD_SUBDIRECTORY(test ${PROJECT_BINARY_DIR}/bin/test)
#ADD_DEFINITIONS(-DSPEEDTEST)

INSTALL(PROGRAMS exec.sh DESTINATION ${PROJECT_BINARY_DIR}/bin)
#INSTALL(PROGRAMS init.sh DESTINATION ${PROJECT_BINARY_DIR}/bin)
INSTALL(PROGRAMS ID.xml DESTINATION ${PROJECT_BINARY_DIR}/bin)

#ADD_TEST(mytest ${PROJECT_BINARY_DIR}/bin/labcodec_unittest)
#ENABLE_TESTING()
