AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/CS/src/CS CS_SRCS2)
#MESSAGE(STATUS "DM source path: ${DM_SRCS2}")
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/CS/src/protocol PROTO_SRCS2)
#MESSAGE(STATUS "protocol source path: ${PROTO_SRCS2}")
AUX_SOURCE_DIRECTORY(. TEST_SRCS2)

SET(MUDUO_INCLUDE_PATH /home/build/debug-install/include)
SET(CS_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/CS/include)
SET(GTEST_INCLUDE_PATH /home/gtest-1.7.0/include)

INCLUDE_DIRECTORIES(${MUDUO_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CS_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_PATH})

ADD_DEFINITIONS(-DCSTEST)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/test)
STRING(REPLACE "${PROJECT_SOURCE_DIR}/CS/src/CS/main.cc" "" CS_SRCS5 "${CS_SRCS2}")
ADD_EXECUTABLE(csserver_unittest ${TEST_SRCS2} ${CS_SRCS5} ${PROTO_SRCS2})
TARGET_LINK_LIBRARIES(csserver_unittest xml2 muduo_net_cpp11 muduo_base_cpp11
    pthread rt dl z protobuf /home/gtest-1.7.0/build/libgtest.a)
INSTALL(PROGRAMS ID.xml DESTINATION ${PROJECT_BINARY_DIR}/bin/test)
ADD_SUBDIRECTORY(RWMutexTest)
